# LAMP-extractor

./: LICENSE  README.md  evaluate.py  evaluate.spec
b02_lnt_02102022-03112022/: _20220210_3000839740_rna.csv  _20220210_3000839740_sars.csv  _20220210_3000839763_rna.csv  _20220210_3000839763_sars.csv  _20220210_6000372086_rna.csv  _20220210_6000372086_sars.csv  _20220210_6000373223_rna.csv  _20220210_6000373223_sars.csv  _20220210_6000373512_rna.csv  _20220210_6000373512_sars.csv  _20220210_6000373529_rna.csv  _20220210_6000373529_sars.csv  _20220210_6000373566_sars.csv  _20220210_6000373631_sars.csv  _20220210_6000373685_rna.csv  _20220210_6000373685_sars.csv  _20220210_6000373692_rna.csv  _20220210_6000373692_sars.csv  _20220210_6000373810_rna.csv  _20220210_6000373810_sars.csv  _20220211_3000840900_sars.csv  _20220211_6000373351_rna.csv  _20220211_6000373351_sars.csv  _20220211_6000373529_rna.csv  _20220211_6000373529_sars.csv  _20220211_6000373554_rna.csv  _20220211_6000373554_sars.csv  _20220211_6000373585_rna.csv  _20220211_6000373631_sars.csv  (+155 more)
lamp-extractor/: README.md  pyproject.toml  setup.cfg
lamp-extractor/src/lamp_extractor/: main.py  prepare.py  timer.py  utils.py
lamp-extractor/src/lamp_extractor/apis/rest/: api.py  config.yaml
lamp-extractor/src/lamp_extractor/models/mobilenet_v2/: download_model.sh
lamp-extractor/src/lamp_extractor/models/mobilenet_v2_02_aug_resume/: config.yaml  download_model.sh  infer_transform.yaml  loader.py  logs  model.py
lamp-extractor/src/lamp_extractor/models/mobilenet_v2_02_base/: download_model.sh
