[metadata]
name = lamp-extractor
version = attr: lamp_extractor.__version__
author = Peter Jurkacek
author_email = pjurkacek@aston.sk
description = Lamp plate segmentation based on warped perspective transform
long_description = #file: README.md
long_description_content_type = text/markdown
url = http://git.aston.local/machine-learning/lamp-extractor
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU License
    Operating System :: OS Independent

[options]
install_requires =
    torch == 1.10.0
    torchvision == 0.11.1
    albumentations
    loguru == 0.5.3
    scikit-image == 0.18.1
    tqdm == 4.56.0
    fastapi == 0.63.0
    uvicorn == 0.13.3
    python-multipart == 0.0.5
    aiofiles == 0.6.0
    imutils == 0.5.4
    pyyaml == 5.3.1
    requests == 2.25.1
    pandas == 1.2.3
    uvicorn_loguru_integration
packages = find:
package_dir = =src
include_package_data = True
python_requires = >=3.8

[options.packages.find]
where = src

[options.package_data]
lamp_extractor =
    apis/rest/config.yaml
    models/mobilenet_v2_02_aug_resume

[options.extras_require]
test = 
    pytest
    pytest-mock